Mobile responsive fixed.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
         <div class="container">
             <div class="inner-header">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2">
+                    <div class="col-lg-2 col-md-2 mobile-logo-fixed">
                         <div class="logo">
                             <a href="index.html">
                                 <img src="img/logo_main.png" class="w-100" alt="logo" draggable="false" />
                             </a>
+                            <img src="img/bars-solid.svg" alt="mobile menu" class="img-vector d-lg-none"  width="15" draggable="false" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" />
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-7">
+                    <div class="col-lg-7 col-md-7 mobile-pt-90">
                         <div class="advanced-search">
                             <button type="button" class="category-btn">All Categories</button>
                             <div class="input-group">
@@ -103,6 +104,20 @@
                         <li class="active"><a href="javascript:void(0);" class="nav-add-cart-button"><img src="img/cart-shopping-solid-white.svg" class="fa-shopping-cart" alt="Cart" draggable="false" width="15" /> Shopping Cart (0)</a></li>
                     </ul>
                 </nav>
+                <div class="collapse" id="collapseExample">
+                    <nav class="nav-menu">
+                        <ul>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="javascript:void(0);">Shop</a></li>
+                            <li><a href="javascript:void(0);">Features</a></li>
+                            <li><a href="javascript:void(0);">Mega Group</a></li>
+                            <li><a href="javascript:void(0);">About</a></li>
+                            <li><a href="javascript:void(0);">Blog</a></li>
+                            <li><a href="javascript:void(0);">Contact</a></li>
+                            <li class="active"><a href="javascript:void(0);" class="nav-add-cart-button"><img src="img/cart-shopping-solid-white.svg" class="fa-shopping-cart" alt="Cart" draggable="false" width="15" /> Shopping Cart (0)</a></li>
+                        </ul>
+                    </nav>
+                </div>
                 <div id="mobile-menu-wrap d-lg-none"></div>
             </div>
         </div>
@@ -140,7 +155,7 @@
     <div class="banner-section spad">
         <div class="container">
             <div class="quicklink-name">
-                <a class="quicklink-separater" href="javascript:void(0);">
+                <a class="quicklink-separate" href="javascript:void(0);">
                     <h5>Go quickly to <img src="img/circle-right-regular.svg" width="15px" alt="arrow" class="nav-arrow-right" draggable="false" /></h5>
                 </a>
                 <a class="quicklink-text" href="javascript:void(0);">
